--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      任务大厅
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content>
+  <ion-item routerLink="/tasknew">发任务</ion-item>
+  <ion-item routerLink="/taskcategory">接任务</ion-item>
+  <ion-item routerLink="/taskmylist">交任务</ion-item>
+  <ion-item routerLink="/taskmylist">我的任务</ion-item>
 </ion-content>
