--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="tab1" href="/tabs/(tab1:tab1)">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>主页</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="tab2" href="/tabs/(tab2:tab2)">
+      <ion-icon name="flash"></ion-icon>
+      <ion-label>任务大厅</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="tab3" href="/tabs/(tab3:tab3)">
+      <ion-icon name="person"></ion-icon>
+      <ion-label>个人中心</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
